# Color-Marker-Optical-Tracking-with-ROS2-Foxy

./: README.md
camera_pkg/: CMakeLists.txt  package.xml
camera_pkg/include/camera_pkg/: image_publisher.hpp  static_camera_tf2_broadcaster.hpp
camera_pkg/launch/: camera_publish.launch.py  view_camera_publish.launch.py
camera_pkg/params/: camera_parameters_config.yaml
camera_pkg/rviz/: camera_geometry.rviz
camera_pkg/src/: image_publisher.cpp  static_camera_tf2_broadcaster.cpp
optical_marker_tracking/: CMakeLists.txt  package.xml
optical_marker_tracking/include/optical_marker_tracking/: .optical_marker_tracking_utils.hpp.swp  marker_detector.hpp  marker_matcher.hpp  marker_tf2_broadcaster.hpp  marker_tracker.hpp  marker_triangulator.hpp  object_tf2_broadcaster.hpp
optical_marker_tracking/launch/: optical_marker_tracking.launch.py  view_optical_marker_tracking.launch.py
optical_marker_tracking/meshes/: paddle_handle.STL  paddle_rubber.STL
optical_marker_tracking/params/: optical_tracking_parameters_config.yaml
optical_marker_tracking/src/: .marker_tracker.cpp.swp  marker_detector.cpp  marker_matcher.cpp  marker_tf2_broadcaster.cpp  marker_tracker.cpp  marker_triangulator.cpp  object_tf2_broadcaster.cpp
optical_marker_tracking/urdf/: paddle.urdf.xacro  table.urdf.xacro
optical_tracking_msgs/: CMakeLists.txt  package.xml
optical_tracking_msgs/include/optical_tracking_msgs/: optical_tracking_utils.hpp
optical_tracking_msgs/msg/: KeyPoint.msg  KeyPointMultiArray.msg  PointMultiArray.msg
